[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/level selector.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=10]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.112, 0.984 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.54902, 0.54902, 1, 0.141176, 0.0392157, 0.0392157, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.478431, 0.478431, 0.611765 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.529412, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.529412, 0.529412, 0.392157 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.529412, 0.529412, 0.235294 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.529412, 0.529412, 0.129412 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -499, 160 )
script = ExtResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2( 1079, 522 )
scale = Vector2( 1086, 559.25 )
mesh = SubResource( 10 )
texture = SubResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_right = 60.0
margin_bottom = 15.0
rect_scale = Vector2( 3, 3 )
custom_colors/default_color = Color( 0, 0.631373, 0.823529, 1 )
text = "Level Selector"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -44.0
margin_right = 50.0
margin_bottom = 44.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 14

[node name="Level1" type="Button" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 100.0
margin_bottom = 42.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 100.0
margin_bottom = 70.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 3"

[node name="Back To Menu" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 100.0
margin_bottom = 98.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Back To Menu"

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="VBoxContainer/Back To Menu" to="." method="_on_Back_To_Menu_pressed"]
